# add some fix - В модулях убраны дефолтные настройки для kafka на уровне классов - Для ScenarioService переписана логика сохранения сценариев - Для DeviceService переписана логика добавления и удаления сенсоров